rust_writer_proc/tests/ui/local_finder_fails_if_not_field_called_found_in_implementor.stderr
error: Expected a field named found being [bool;N] inside struct.
 --> tests/ui/local_finder_fails_if_not_field_called_found_in_implementor.rs:6:8
  |
6 | struct SomeStruct;
  |        ^^^^^^^^^^
